tests/query_test/test_decimal_casting.py
@@ -137,12 +137,7 @@ class TestDecimalCasting(ImpalaTestSuite):
       val = self._gen_decimal_val(from_precision, scale)
       cast = self._normalize_cast_expr(val, from_precision,\
           vector.get_value('cast_from')).format(val, precision, scale)
-      if vector.get_value('cast_from') == "string":
-        # TODO: This should be an error in both cases (IMPALA-6405).
-        res = self.execute_scalar(cast)
-        self._assert_decimal_result(cast, res, 'NULL')
-      else:
-        res = self.execute_query_expect_failure(self.client, cast)
+      res = self.execute_query_expect_failure(self.client, cast)
 
   def test_underflow(self, vector):
     """Test to verify that we truncate when the scale of the number being cast is higher
